# StyleCheck

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dependabot.yml
.github/workflows/: backmerge-main-to-dev.yml  main-pr-policy.yml  prepare-release-pr.yml  release.yml  tag-on-merge.yml
scripts/: check-versions.sh  next-tag.sh  release.sh  style.sh  tag-to-python-version.sh
scripts/style.sh.d/: run.sh
src/: main.py
src/splinter3d_style/: __init__.py  main.py
tests/: test_main.py
